virtualbox (4.1.0-dfsg-1) UNRELEASED; urgency=low

  * New upstream release.
  * Use VBOX_BUILD_PUBLISHER instead of VBOX_VERSION_STRING to set the
    version suffix.
  * Refresh patches.
  * Drop 22-no-static-libstdcpp.patch and 31-multiarch-dri-path.patch,
    applied upstream.
  * Add 34-fix-vboxpci-build.patch to fix a VBoxPCI build failure.

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 29 Jul 2011 18:04:05 +0200

virtualbox (4.0.10-dfsg-1) unstable; urgency=low

  * New upstream release.
    - Fixes VT-x detection on Linux 3.0 hosts. (LP: #799253)
  * Don't disable the hardware performance counter in the init script, not
    needed anymore since VirtualBox 4.0.0.
  * Add 31-multiarch-dri-path.patch to fix 3d guest acceleration with the
    multiarched mesa package.
  * Use new Provides scheme for xorg video and input drivers. (Closes: #631612)
  * Add 32-disable-guest-version-check.patch to disable notifications about
    outdated guest additions.
  * Link against the static gsoap++ library to fix FTBFS. (Closes: #632368)

 -- Felix Geyer <debfx-pkg@fobos.de>  Sun, 03 Jul 2011 18:43:49 +0200

virtualbox (4.0.8-dfsg-2) unstable; urgency=low

  * Add virtualbox-guest-x11 Breaks/Replaces virtualbox-ose-guest-x11.
    (Closes: #628784)

 -- Felix Geyer <debfx-pkg@fobos.de>  Wed, 01 Jun 2011 12:50:08 +0200

virtualbox (4.0.8-dfsg-1) unstable; urgency=low

  [ Felix Geyer ]
  * New upstream release. (Closes: #627680)
  * Adapt 07-vboxnetflt-reference.patch to new upstream version.
  * Update overrides for lintian 2.5.
  * Register mime types and install icons.
  * Pass --enable-vnc to configure instead of enabling it in LocalConfig.kmk.
  * Drop Conflicts between virtualbox-ose-dkms and virtualbox-ose-guest-dkms
    as the kernel module symbols are mangled now. (Closes: #625742)
  * Add lintian overrides for no-symbols-control-file usr/lib/VBoxOGL*.so.
  * Create vboxsf group in virtualbox-ose-guest-utils postinst to make
    auto-mounting shared folders work.