@@ -10,4 +10,7 @@ DEST_MODULE_LOCATION[1]="/updates"
 BUILT_MODULE_NAME[2]="vboxnetflt"
 BUILT_MODULE_LOCATION[2]="vboxnetflt"
 DEST_MODULE_LOCATION[2]="/updates"
+BUILT_MODULE_NAME[3]="vboxpci"
+BUILT_MODULE_LOCATION[3]="vboxpci"
+DEST_MODULE_LOCATION[3]="/updates"
 AUTOINSTALL="yes"
