@@ -1,21 +1,28 @@
 /usr/src/virtualbox-CVERSION/r0drv /usr/src/virtualbox-CVERSION/vboxdrv/r0drv
 /usr/src/virtualbox-CVERSION/r0drv /usr/src/virtualbox-CVERSION/vboxnetflt/r0drv
 /usr/src/virtualbox-CVERSION/r0drv /usr/src/virtualbox-CVERSION/vboxnetadp/r0drv
+/usr/src/virtualbox-CVERSION/r0drv /usr/src/virtualbox-CVERSION/vboxpci/r0drv
 /usr/src/virtualbox-CVERSION/include /usr/src/virtualbox-CVERSION/vboxdrv/include
 /usr/src/virtualbox-CVERSION/include /usr/src/virtualbox-CVERSION/vboxnetflt/include
 /usr/src/virtualbox-CVERSION/include /usr/src/virtualbox-CVERSION/vboxnetadp/include
+/usr/src/virtualbox-CVERSION/include /usr/src/virtualbox-CVERSION/vboxpci/include
 /usr/src/virtualbox-CVERSION/alloc /usr/src/virtualbox-CVERSION/vboxdrv/alloc
 /usr/src/virtualbox-CVERSION/alloc /usr/src/virtualbox-CVERSION/vboxnetflt/alloc
 /usr/src/virtualbox-CVERSION/alloc /usr/src/virtualbox-CVERSION/vboxnetadp/alloc
+/usr/src/virtualbox-CVERSION/alloc /usr/src/virtualbox-CVERSION/vboxpci/alloc
 /usr/src/virtualbox-CVERSION/common /usr/src/virtualbox-CVERSION/vboxdrv/common
 /usr/src/virtualbox-CVERSION/common /usr/src/virtualbox-CVERSION/vboxnetflt/common
 /usr/src/virtualbox-CVERSION/common /usr/src/virtualbox-CVERSION/vboxnetadp/common
+/usr/src/virtualbox-CVERSION/common /usr/src/virtualbox-CVERSION/vboxpci/common
 /usr/src/virtualbox-CVERSION/generic /usr/src/virtualbox-CVERSION/vboxdrv/generic
 /usr/src/virtualbox-CVERSION/generic /usr/src/virtualbox-CVERSION/vboxnetflt/generic
 /usr/src/virtualbox-CVERSION/generic /usr/src/virtualbox-CVERSION/vboxnetadp/generic
+/usr/src/virtualbox-CVERSION/generic /usr/src/virtualbox-CVERSION/vboxpci/generic
 /usr/src/virtualbox-CVERSION/math /usr/src/virtualbox-CVERSION/vboxdrv/math
 /usr/src/virtualbox-CVERSION/math /usr/src/virtualbox-CVERSION/vboxnetflt/math
 /usr/src/virtualbox-CVERSION/math /usr/src/virtualbox-CVERSION/vboxnetadp/math
+/usr/src/virtualbox-CVERSION/math /usr/src/virtualbox-CVERSION/vboxpci/math
 /usr/src/virtualbox-CVERSION/VBox /usr/src/virtualbox-CVERSION/vboxdrv/VBox
 /usr/src/virtualbox-CVERSION/VBox /usr/src/virtualbox-CVERSION/vboxnetflt/VBox
 /usr/src/virtualbox-CVERSION/VBox /usr/src/virtualbox-CVERSION/vboxnetadp/VBox
+/usr/src/virtualbox-CVERSION/VBox /usr/src/virtualbox-CVERSION/vboxpci/VBox
