@@ -10,6 +10,10 @@ out/bin/src/vboxnetadp/*.* /usr/src/modules/virtualbox/vboxnetadp
 out/bin/src/vboxnetadp/linux /usr/src/modules/virtualbox/vboxnetadp
 out/bin/src/vboxnetadp/Makefile /usr/src/modules/virtualbox/vboxnetadp
 
+out/bin/src/vboxpci/*.* /usr/src/modules/virtualbox/vboxpci
+out/bin/src/vboxpci/linux /usr/src/modules/virtualbox/vboxpci
+out/bin/src/vboxpci/Makefile /usr/src/modules/virtualbox/vboxpci
+
 out/bin/src/vboxdrv/*-generated.h /usr/src/modules/virtualbox/include
 out/bin/src/vboxdrv/include/iprt/* /usr/src/modules/virtualbox/include/iprt
 out/bin/src/vboxdrv/include/VBox/* /usr/src/modules/virtualbox/include/VBox
@@ -21,6 +25,9 @@ out/bin/src/vboxnetflt/include/VBox/* /usr/src/modules/virtualbox/include/VBox
 out/bin/src/vboxnetadp/include/iprt/* /usr/src/modules/virtualbox/include/iprt
 out/bin/src/vboxnetadp/include/VBox/* /usr/src/modules/virtualbox/include/VBox
 out/bin/src/vboxnetadp/include/internal/* /usr/src/modules/virtualbox/include/internal
+
+out/bin/src/vboxpci/include/iprt/* /usr/src/modules/virtualbox/include/iprt
+out/bin/src/vboxpci/include/VBox/* /usr/src/modules/virtualbox/include/VBox
 
 out/bin/src/vboxdrv/r0drv /usr/src/modules/virtualbox
 out/bin/src/vboxdrv/common /usr/src/modules/virtualbox
