@@ -3,21 +3,28 @@
 /usr/src/modules/virtualbox/r0drv /usr/src/modules/virtualbox/vboxdrv/r0drv
 /usr/src/modules/virtualbox/r0drv /usr/src/modules/virtualbox/vboxnetflt/r0drv
 /usr/src/modules/virtualbox/r0drv /usr/src/modules/virtualbox/vboxnetadp/r0drv
+/usr/src/modules/virtualbox/r0drv /usr/src/modules/virtualbox/vboxpci/r0drv
 /usr/src/modules/virtualbox/include /usr/src/modules/virtualbox/vboxdrv/include
 /usr/src/modules/virtualbox/include /usr/src/modules/virtualbox/vboxnetflt/include
 /usr/src/modules/virtualbox/include /usr/src/modules/virtualbox/vboxnetadp/include
+/usr/src/modules/virtualbox/include /usr/src/modules/virtualbox/vboxpci/include
 /usr/src/modules/virtualbox/alloc /usr/src/modules/virtualbox/vboxdrv/alloc
 /usr/src/modules/virtualbox/alloc /usr/src/modules/virtualbox/vboxnetflt/alloc
 /usr/src/modules/virtualbox/alloc /usr/src/modules/virtualbox/vboxnetadp/alloc
+/usr/src/modules/virtualbox/alloc /usr/src/modules/virtualbox/vboxpci/alloc
 /usr/src/modules/virtualbox/common /usr/src/modules/virtualbox/vboxdrv/common
 /usr/src/modules/virtualbox/common /usr/src/modules/virtualbox/vboxnetflt/common
 /usr/src/modules/virtualbox/common /usr/src/modules/virtualbox/vboxnetadp/common
+/usr/src/modules/virtualbox/common /usr/src/modules/virtualbox/vboxpci/common
 /usr/src/modules/virtualbox/generic /usr/src/modules/virtualbox/vboxdrv/generic
 /usr/src/modules/virtualbox/generic /usr/src/modules/virtualbox/vboxnetflt/generic
 /usr/src/modules/virtualbox/generic /usr/src/modules/virtualbox/vboxnetadp/generic
+/usr/src/modules/virtualbox/generic /usr/src/modules/virtualbox/vboxpci/generic
 /usr/src/modules/virtualbox/math /usr/src/modules/virtualbox/vboxdrv/math
 /usr/src/modules/virtualbox/math /usr/src/modules/virtualbox/vboxnetflt/math
 /usr/src/modules/virtualbox/math /usr/src/modules/virtualbox/vboxnetadp/math
+/usr/src/modules/virtualbox/math /usr/src/modules/virtualbox/vboxpci/math
 /usr/src/modules/virtualbox/VBox /usr/src/modules/virtualbox/vboxdrv/VBox
 /usr/src/modules/virtualbox/VBox /usr/src/modules/virtualbox/vboxnetflt/VBox
 /usr/src/modules/virtualbox/VBox /usr/src/modules/virtualbox/vboxnetadp/VBox
+/usr/src/modules/virtualbox/VBox /usr/src/modules/virtualbox/vboxpci/VBox
