@@ -91,6 +91,18 @@ start()
 		fi
 	fi
 	
+	if ! running vboxpci; then
+		if ! modprobe vboxpci > /dev/null 2>&1; then
+			if ! find /lib/modules/`uname -r` -name "vboxpci\.*" 2>/dev/null|grep -q vboxpci; then
+				log_failure_msg "No suitable vboxpci module for running kernel found"
+			else
+				log_failure_msg "modprobe vboxpci failed. Please use 'dmesg' to find out why"
+			fi
+			log_end_msg 1
+			return 1
+		fi
+	fi
+	
 	log_end_msg 0
 }
 
@@ -106,15 +118,23 @@ stop()
 		fi
 	fi
 	
-	if running vboxdrv; then
-		if running vboxnetflt; then
-			if ! rmmod vboxnetflt 2>/dev/null; then
-				log_failure_msg "Cannot unload module vboxnetflt"
-				log_end_msg 1
-				return 1
-			fi
+	if running vboxnetflt; then
+		if ! rmmod vboxnetflt 2>/dev/null; then
+			log_failure_msg "Cannot unload module vboxnetflt"
+			log_end_msg 1
+			return 1
 		fi
-		
+	fi
+	
+	if running vboxpci; then
+		if ! rmmod vboxpci 2>/dev/null; then
+			log_failure_msg "Cannot unload module vboxpci"
+			log_end_msg 1
+			return 1
+		fi
+	fi
+	
+	if running vboxdrv; then
 		if ! rmmod vboxdrv 2>/dev/null; then
 			log_failure_msg "Cannot unload module vboxdrv"
 			log_end_msg 1
@@ -180,16 +200,8 @@ stop_vms()
 
 dmnstatus()
 {
-	if running vboxdrv; then
-		if running vboxnetflt; then
-			if running vboxnetadp; then
-				echo "VirtualBox kernel modules (vboxdrv, vboxnetflt and vboxnetadp) are loaded."
-			else
-				echo "VirtualBox kernel modules (vboxdrv and vboxnetflt) are loaded."
-			fi
-		else
-		  echo "VirtualBox kernel module is loaded."
-		fi
+	if running vboxdrv && running vboxnetflt && running vboxnetadp && running vboxpci; then
+		echo "VirtualBox kernel modules are loaded."
 		
 		for i in $SHUTDOWN_USERS; do
 			if [ -d /tmp/.vbox-$i-ipc ]; then
